--- a/css/styles.css
+++ b/css/styles.css
@@ -272,6 +272,7 @@ ul {
     cursor: pointer;
 }
 
+/* Modal Window */
 .backdrop {
     position: fixed;
     top: 0;
@@ -300,6 +301,7 @@ ul {
     min-width: 528px;
     min-height: 581px;
     background-color: #ffffff;
+    padding: 40px;
 }
 
 .modal-btn {
@@ -325,6 +327,181 @@ ul {
     fill: #000000;
 }
 
+.form-title {
+    display: inline-block;
+    margin-bottom: 12px;
+    font-weight: 700;
+    font-size: 20px;
+    line-height: 1.15;
+    text-align: center;
+    letter-spacing: 0.03em;
+    color: var(--second-header-color);
+    text-align: center;
+
+}
+
+.register-form-group {
+    display: flex;
+    flex-direction: column;
+}
+
+
+
+.form-group {
+    position: relative;
+    margin-bottom: 10px;
+}
+
+.form-group:last-child {
+    margin-bottom: 0;
+}
+
+.form-label {
+    display: flex;
+}
+
+.form-label-text {
+    font-weight: 400;
+    font-size: 12px;
+    line-height: 1.16;
+    letter-spacing: 0.01em;
+    color: var(--main-text-color);
+    margin-bottom: 4px;
+
+}
+
+.form-input {
+    min-width: 448px;
+    min-height: 40px;
+    outline: transparent;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    padding-left: 42px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-input:hover,
+.form-input:focus {
+    border-color: var(--accent-color);
+    cursor: pointer;
+    outline: transparent;
+}
+
+
+.form-input:hover+.form-icon,
+.form-input:focus+.form-icon {
+    fill: var(--accent-color);
+
+}
+
+.form-icon {
+    position: absolute;
+    bottom: 11px;
+    left: 12px;
+    transform-origin: 50% 50%;
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.form-comment {
+    max-height: 138px;
+    min-width: 448px;
+    border: 1px solid rgba(33, 33, 33, 0.2);
+    border-radius: 4px;
+    margin-top: 4px;
+    resize: none;
+    padding: 12px 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.form-comment:hover,
+.form-comment:focus {
+    border-color: var(--accent-color);
+    cursor: pointer;
+    outline: transparent;
+}
+
+.form-comment::placeholder {
+    color: rgba(117, 117, 117, 0.5);
+}
+
+.register-form-agreement {
+    display: flex;
+    align-items: center;
+    gap: 7px;
+}
+
+.register-form-checkbox:checked+.register-form-icon .register-form-unchecked {
+    opacity: 0;
+}
+
+.register-form-checkbox:checked+.register-form-icon .register-form-checked {
+    opacity: 1;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.register-form-unchecked {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    fill: currentColor;
+}
+
+.register-form-unchecked:focus {
+    fill: var(--accent-color);
+}
+
+.register-form-checked {
+    opacity: 0;
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox-text {
+    font-weight: 400;
+    font-size: 14px;
+    line-height: 1.71;
+    letter-spacing: 0.03em;
+    color: var(--main-text-color);
+    user-select: none;
+}
+
+.checkbox-agreement-link {
+    cursor: pointer;
+    color: var(--accent-color);
+}
+
+.modal-btn-submit {
+    display: flex;
+    justify-content: center;
+    width: 200px;
+    min-height: 50px;
+    background-color: var(--accent-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+    align-items: center;
+    outline: transparent;
+    margin: 0 auto;
+    margin-top: 40px;
+    padding: 10px 56px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-btn-submit:hover,
+.modal-btn-submit:focus {
+    cursor: pointer;
+    background-color: var(--btn-hover-color);
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+}
+
+.modal-btn-text {
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--main-bcg-color);
+}
 
 /* Особенности */
 .speciality {
@@ -728,7 +905,80 @@ ul {
     fill: var(--main-bcg-color);
 }
 
+/* Footer Subscribe */
 
+
+.subscribe-form {
+    margin-left: 93px;
+}
+
+.subscribe-title {
+    font-weight: 700;
+    font-size: 14px;
+    line-height: 1.14;
+    letter-spacing: 0.03em;
+    text-transform: uppercase;
+    color: var(--main-bcg-color);
+}
+
+.subscribe-label-form {
+    display: inline-flex;
+    margin-top: 20px;
+}
+
+.subscribe-input {
+    border: 1px solid rgba(255, 255, 255, 0.3);
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+    border-radius: 4px;
+    padding: 15px 16px;
+    min-width: 358px;
+    min-height: 50px;
+    background-color: transparent;
+    color: var(--main-bcg-color);
+}
+
+.subscribe-input::placeholder {
+    padding-top: 15px;
+    font-weight: 400;
+    font-size: 16px;
+    line-height: 1.25;
+    letter-spacing: 0.03em;
+    color: rgba(255, 255, 255, 0.6);
+}
+
+.subscribe-btn {
+    display: inline-flex;
+
+    margin-left: 12px;
+    width: 200px;
+    min-height: 50px;
+    text-align: center;
+    background-color: var(--accent-color);
+    color: var(--main-bcg-color);
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
+    padding: 10px 18px 10px 29px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    letter-spacing: 0.06em;
+    box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border-radius: 4px;
+
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+.subscribe-btn:hover,
+.subscribe-btn:focus {
+    background-color: var(--btn-hover-color);
+    cursor: pointer;
+}
+
+.subscribe-btn-icon {
+    fill: currentColor;
+}
 
 /* Portfolio page 2 */
 
@@ -871,21 +1121,6 @@ ul {
 }
 
 .overlay {
-    /* position: absolute;
-    top: 0;
-    left: 0%;
-    transform: translateY(100%);
-
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 63px 24px;
-
-    background-color: rgba(33, 150, 243, 0.9);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1); */
-
     position: absolute;
 
     width: 100%;
