--- a/css/styles.css
+++ b/css/styles.css
@@ -298,10 +298,11 @@ ul {
     top: 50%;
     left: 50%;
     transform: translate(-50%, -50%);
-    min-width: 528px;
-    min-height: 581px;
+    width: 528px;
     background-color: #ffffff;
-    padding: 40px;
+
+    box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
 }
 
 .modal-btn {
@@ -321,13 +322,6 @@ ul {
     border: 1px solid rgba(0, 0, 0, 0.1);
 
     cursor: pointer;
-    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-}
-
-.modal-btn:hover,
-.modal-btn:focus {
-    border-color: var(--accent-color);
 
 }
 
@@ -346,27 +340,45 @@ ul {
 
 .form-title {
     display: inline-block;
-    margin-bottom: 12px;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
     text-align: center;
     letter-spacing: 0.03em;
     color: var(--second-header-color);
-    text-align: center;
+    margin-bottom: 12px;
 
+}
+
+.register-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    padding: 40px;
+    gap: 10px;
+    width: 100%;
 }
 
 .register-form-group {
     display: flex;
     flex-direction: column;
+    gap: 10px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
-
-
 .form-group {
+    display: flex;
+    flex-direction: column;
+    gap: 4px;
+    width: 100%;
     position: relative;
-    margin-bottom: 10px;
+    top: 0;
+    left: 0;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+    letter-spacing: 0.01em;
+
 }
 
 .form-group:last-child {
@@ -383,17 +395,15 @@ ul {
     line-height: 1.16;
     letter-spacing: 0.01em;
     color: var(--main-text-color);
-    margin-bottom: 4px;
 
 }
 
 .form-input {
-    min-width: 448px;
-    min-height: 40px;
+    height: 40px;
     outline: transparent;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    padding-left: 42px;
+    padding-left: 40px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -421,13 +431,15 @@ ul {
 
 
 .form-comment {
-    max-height: 138px;
-    min-width: 448px;
+    max-height: 120px;
+    max-width: 448px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
-    margin-top: 4px;
     resize: none;
     padding: 12px 16px;
+    font-size: 12px;
+    line-height: 1.17;
+    letter-spacing: 0.01em;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -446,6 +458,7 @@ ul {
 .register-form-agreement {
     display: flex;
     align-items: center;
+    margin-bottom: 30px;
     gap: 7px;
 }
 
@@ -458,12 +471,12 @@ ul {
     transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.register-form-unchecked {
-    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    fill: currentColor;
+.register-form-agreement .register-form-unchecked {
+    transition: 250ms cubic-bezier(0.4, 0, 0.2, 1), fill var(--accent-color);
 }
 
-.register-form-unchecked:focus {
+.register-form-agreement:hover .register-form-unchecked,
+.register-form-checkbox:focus+.register-form-icon .register-form-unchecked {
     fill: var(--accent-color);
 }
 
@@ -490,15 +503,13 @@ ul {
     display: flex;
     justify-content: center;
     width: 200px;
-    min-height: 50px;
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     border-radius: 4px;
     align-items: center;
     outline: transparent;
     margin: 0 auto;
-    margin-top: 40px;
-    padding: 10px 56px;
+    padding: 10px 52px;
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -930,6 +941,8 @@ ul {
 }
 
 .subscribe-title {
+    display: block;
+    margin-bottom: 20px;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -938,9 +951,8 @@ ul {
     color: var(--main-bcg-color);
 }
 
-.subscribe-label-form {
-    display: inline-flex;
-    margin-top: 20px;
+.subscribe {
+    display: flex;
 }
 
 .subscribe-input {
@@ -965,10 +977,9 @@ ul {
 
 .subscribe-btn {
     display: inline-flex;
-
     margin-left: 12px;
     width: 200px;
-    min-height: 50px;
+    max-height: 50px;
     text-align: center;
     background-color: var(--accent-color);
     color: var(--main-bcg-color);
