--- a/css/styles.css
+++ b/css/styles.css
@@ -339,7 +339,7 @@ ul {
 }
 
 .form-title {
-    display: inline-block;
+    display: block;
     font-weight: 700;
     font-size: 20px;
     line-height: 1.15;
@@ -353,10 +353,8 @@ ul {
 .register-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
     padding: 40px;
-    gap: 10px;
-    width: 100%;
+    align-items: center;
 }
 
 .register-form-group {
@@ -378,11 +376,6 @@ ul {
     font-size: 12px;
     line-height: calc(14 / 12);
     letter-spacing: 0.01em;
-
-}
-
-.form-group:last-child {
-    margin-bottom: 0;
 }
 
 .form-label {
@@ -432,7 +425,6 @@ ul {
 
 .form-comment {
     max-height: 120px;
-    max-width: 448px;
     border: 1px solid rgba(33, 33, 33, 0.2);
     border-radius: 4px;
     resize: none;
@@ -458,8 +450,8 @@ ul {
 .register-form-agreement {
     display: flex;
     align-items: center;
-    margin-bottom: 30px;
     gap: 7px;
+    margin-bottom: 30px;
 }
 
 .register-form-checkbox:checked+.register-form-icon .register-form-unchecked {
@@ -505,11 +497,18 @@ ul {
     width: 200px;
     background-color: var(--accent-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+    border: 1px;
     border-radius: 4px;
     align-items: center;
     outline: transparent;
     margin: 0 auto;
     padding: 10px 52px;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 1.87;
+    text-align: center;
+    letter-spacing: 0.06em;
+    color: var(--main-bcg-color);
 
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -519,17 +518,8 @@ ul {
     cursor: pointer;
     background-color: var(--btn-hover-color);
     box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
-    border-radius: 4px;
 }
 
-.modal-btn-text {
-    font-weight: 700;
-    font-size: 16px;
-    line-height: 1.87;
-    text-align: center;
-    letter-spacing: 0.06em;
-    color: var(--main-bcg-color);
-}
 
 /* Особенности */
 .speciality {
@@ -940,7 +930,7 @@ ul {
     margin-left: 93px;
 }
 
-.subscribe-title {
+.subscribe-label-form {
     display: block;
     margin-bottom: 20px;
     font-weight: 700;
